packages/editor/src/components/modals/shareModal/style.less
// Copyright 2018 Superblocks AB
//
// This file is part of Superblocks Lab.
//
// Superblocks Lab is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation version 3 of the License.
//
// Superblocks Lab is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with Superblocks Lab.  If not, see <http://www.gnu.org/licenses/>.

@import '../../../style/index';

.shareModal {
	display: block;
	border-radius: 2px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
    background-color: @modal-background-color;
	z-index: 2;
	color: #fff;
	transition: visibility 0s, opacity 0.2s ease;
	padding: 0px 0px 15px 0px;

    .content {
	    display: flex;
	    flex-direction: row;
	    align-items: left;
	    align-content: center;
        line-height: 1.5em;
        padding: 0px 20px;

		.innerContent {
			padding: 20px 20px;
		}

	    .title {
	    	font-weight: bold;
	    }

        .inputContainer {
            position: relative;
            display: flex;
            align-items: flex-end;
            margin-top: 5px;

			label {
				margin-bottom: 2px;
				font-weight: normal;
			}

			input, textarea {
				font-size: 13px;
				padding: 4px 8px !important;
            }

            button {
                margin-bottom: 5px;
                margin-left: 10px;
                position: absolute;
                right: -5px;
                top: 10px;
            }
        }

		.openStudioBtn {
			margin-top: 15px;
		}

        .optionInput {
        	align-items: center;

        	p {
				min-width: 150px;
        	}
        }
	}
}

